deploy/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: substrate
  labels:
    app.kubernetes.io/name: substrate
